# music-classification-project

./: .gitignore  README.md  dvc.yaml  justfile  params.yaml  pyproject.toml
src/: evaluate.py  prepare.sh  train.py  transform.py  utils.py  visualise.py
